force-app/main/default/objects/Error_Log_Event__e/fields/Apex_Class_Flow_Name__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class_Flow_Name__c</fullName>
    <description>The Apex class or Flow where this error occurred.</description>
    <label>Apex Class/Flow Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>