force-app/main/default/objects/Error_Log_Event__e/fields/Error_Location__c.field-meta.xml
<CustomField>
    <fullName>Error_Location__c</fullName>
    <description>The location where this error occurred.</description>
    <label>Error Location</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>