force-app/main/default/objects/Error_Log_Event__e/fields/Silent_Error__c.field-meta.xml
<CustomField>
    <fullName>Silent_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this error was thrown without the user or automated process from being notified.</description>
    <label>Silent Error</label>
    <type>Checkbox</type>
</CustomField>